finish add to favourite db and share link

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="favourite">favourite</string>
     <string name="description">Description</string>
     <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
+    <string name="addedToFavouriteMovie">Added to favourite movie</string>
 </resources>
